<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_width="130dp"
            android:layout_height="300dp"
            android:layout_marginStart="-50dp"
            android:layout_gravity="start"
            android:src="@drawable/variasi_dua"
            android:contentDescription="@string/todo" />
        <ImageView
            android:layout_width="220dp"
            android:layout_height="211dp"
            android:src="@drawable/logo_eperpus"
            android:layout_gravity="center"
            android:contentDescription="@string/todo" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="300dp"
            android:layout_gravity="end"
            android:layout_marginStart="10dp"
            android:src="@drawable/variasi_satu"
            android:contentDescription="@string/todo" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollIndicators="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_rounded"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="24dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selamat_datang"
                    android:fontFamily="@font/poppins_medium"
                    android:textSize="20sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/silahkan_masukan_email_dan_password_untuk_melanjutkan"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/username"/>
                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:textSize="13sp"
                    android:hint="@string/masukan_username"
                    android:padding="15dp"
                    android:background="@drawable/bg_editext_login"
                    android:fontFamily="@font/poppins_regular"
                    android:autofillHints=""/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/password"/>
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:textSize="13sp"
                    android:paddingStart="15dp"
                    android:hint="@string/password_label"
                    android:inputType="textPassword"
                    android:background="@drawable/bg_editext_login"
                    android:fontFamily="@font/poppins_regular"
                    tools:ignore="RtlSymmetry"
                    android:autofillHints="" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lupa_password"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="12sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/bantuan"
                        android:textColor="#0277BD"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="255dp"
                        android:layout_height="50dp"
                        android:text="@string/masuk"
                        android:background="@drawable/btn_rounded"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        />
                    <androidx.cardview.widget.CardView
                        android:id="@+id/btnscanfinger"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:drawable="@drawable/ic_finger_print"
                        android:layout_marginStart="10dp"
                        android:backgroundTint="@color/second"
                        app:cardCornerRadius="10dp">
                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_finger_print"
                            android:contentDescription="@string/todo" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/belum_punya_akun"
                        android:fontFamily="@font/poppins_regular"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/daftar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/daftar"
                        android:textColor="#0277BD"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>